// Options
syntax = "proto3";
package bluk_games;

// Imports
import "types/game.proto";
import "types/news.proto";
import "types/miscellaneous.proto";
import "types/gameCluster.proto";

import "types/metadata/GamesListService.proto";
import "types/metadata/GameService.proto";

// Service
service GamesListService {
  rpc Search (SearchRequest) returns (SearchResponse) {}
  rpc GetOne (GetOneById) returns (Game) {}
  rpc FetchFeatured (EmptyRequest) returns (FetchFeaturedResponse) {}
}

service GameService {
  rpc Create (CreateRequest) returns (Game) {}
  rpc Update (Game) returns (Game) {}
};

service NewsService {
  rpc FetchMain (EmptyRequest) returns (NewsPost) {}
};
