syntax = "proto3";

package bluk.games;

// Create method
message CreateRequest {
  string name = 1;
}